// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can generated classes 1`] = `
".c-primary-200 {
  color: var(--color-primary-200, #aed051);
}

.bg-primary-200 {
  background-color: var(--color-primary-200, #aed051);
}

.c-primary-300 {
  color: var(--color-primary-300, #c3dd7b);
}

.bg-primary-300 {
  background-color: var(--color-primary-300, #c3dd7b);
}

.c-primary-400 {
  color: var(--color-primary-400, #d7e9a6);
}

.bg-primary-400 {
  background-color: var(--color-primary-400, #d7e9a6);
}

.c-primary-600 {
  color: var(--color-primary-600, #75912b);
}

.bg-primary-600 {
  background-color: var(--color-primary-600, #75912b);
}

.c-primary-500 {
  color: var(--color-primary-500, #93b733);
}

.bg-primary-500 {
  background-color: var(--color-primary-500, #93b733);
}

.c-primary-700 {
  color: var(--color-primary-700, #576b21);
}

.bg-primary-700 {
  background-color: var(--color-primary-700, #576b21);
}

.c-primary-800 {
  color: var(--color-primary-800, #3a4717);
}

.bg-primary-800 {
  background-color: var(--color-primary-800, #3a4717);
}

.c-neutral-600 {
  color: var(--color-neutral-600, #ffffff);
}

.bg-neutral-600 {
  background-color: var(--color-neutral-600, #ffffff);
}

.c-neutral-500 {
  color: var(--color-neutral-500, #ffffff);
}

.bg-neutral-500 {
  background-color: var(--color-neutral-500, #ffffff);
}

.c-neutral-400 {
  color: var(--color-neutral-400, #ffffff);
}

.bg-neutral-400 {
  background-color: var(--color-neutral-400, #ffffff);
}

.c-neutral-300 {
  color: var(--color-neutral-300, #fefefe);
}

.bg-neutral-300 {
  background-color: var(--color-neutral-300, #fefefe);
}

.c-neutral-200 {
  color: var(--color-neutral-200, #fefefe);
}

.bg-neutral-200 {
  background-color: var(--color-neutral-200, #fefefe);
}

.c-neutral-100 {
  color: var(--color-neutral-100, #fefefe);
}

.bg-neutral-100 {
  background-color: var(--color-neutral-100, #fefefe);
}

.c-neutral-800 {
  color: var(--color-neutral-800, #7f7f7f);
}

.bg-neutral-800 {
  background-color: var(--color-neutral-800, #7f7f7f);
}

.c-neutral-900 {
  color: var(--color-neutral-900, #000000);
}

.bg-neutral-900 {
  background-color: var(--color-neutral-900, #000000);
}

.c-primary {
  color: var(--color-primary, #93b733);
}

.bg-primary {
  background-color: var(--color-primary, #93b733);
}

.c-neutral {
  color: var(--color-neutral, #fefefe);
}

.bg-neutral {
  background-color: var(--color-neutral, #fefefe);
}

.p-none {
  padding: 0rem;
}

.m-none {
  margin: 0rem;
}

.p-xx-small {
  padding: 0.125rem;
}

.m-xx-small {
  margin: 0.125rem;
}

.p-x-small {
  padding: 0.25rem;
}

.m-x-small {
  margin: 0.25rem;
}

.p-small {
  padding: 0.5rem;
}

.m-small {
  margin: 0.5rem;
}

.p-regular {
  padding: 1rem;
}

.m-regular {
  margin: 1rem;
}

.p-large {
  padding: 2rem;
}

.m-large {
  margin: 2rem;
}

.p-x-large {
  padding: 4rem;
}

.m-x-large {
  margin: 4rem;
}

.p-xx-large {
  padding: 8rem;
}

.m-xx-large {
  margin: 8rem;
}"
`;

exports[`renders css for single theme 1`] = `
":root {
  --color-primary-200: #aed051;
  --color-primary-200--rgb: "174,208,81";
  --color-primary-300: #c3dd7b;
  --color-primary-300--rgb: "195,221,123";
  --color-primary-400: #d7e9a6;
  --color-primary-400--rgb: "215,233,166";
  --color-primary-600: #75912b;
  --color-primary-600--rgb: "117,145,43";
  --color-primary-500: #93b733;
  --color-primary-500--rgb: "147,183,51";
  --color-primary-700: #576b21;
  --color-primary-700--rgb: "87,107,33";
  --color-primary-800: #3a4717;
  --color-primary-800--rgb: "58,71,23";
  --color-neutral-600: #ffffff;
  --color-neutral-600--rgb: "255,255,255";
  --color-neutral-500: #ffffff;
  --color-neutral-500--rgb: "255,255,255";
  --color-neutral-400: #ffffff;
  --color-neutral-400--rgb: "255,255,255";
  --color-neutral-300: #fefefe;
  --color-neutral-300--rgb: "254,254,254";
  --color-neutral-200: #fefefe;
  --color-neutral-200--rgb: "254,254,254";
  --color-neutral-100: #fefefe;
  --color-neutral-100--rgb: "254,254,254";
  --color-neutral-800: #7f7f7f;
  --color-neutral-800--rgb: "127,127,127";
  --color-neutral-900: #000000;
  --color-neutral-900--rgb: "0,0,0";
  --color-primary: #93b733;
  --color-primary--rgb: "147,183,51";
  --color-neutral: #fefefe;
  --color-neutral--rgb: "254,254,254";
  --size-none: 0px;
  --size-none--em: 0;
  --size-xx-small: 2px;
  --size-xx-small--em: 0.125;
  --size-x-small: 4px;
  --size-x-small--em: 0.25;
  --size-small: 8px;
  --size-small--em: 0.5;
  --size-regular: 16px;
  --size-regular--em: 1;
  --size-large: 32px;
  --size-large--em: 2;
  --size-x-large: 64px;
  --size-x-large--em: 4;
  --size-xx-large: 128px;
  --size-xx-large--em: 8;
}

.test {
  color: #93b733;
  color: var(--color-primary, #93b733);
  color: rgba(var(--color-primary--rgb, 147,183,51), 0.2);
  color: rgba(147, 183, 51, 0.2);
  font-size: var(--size-regular, 16px);
  font-size: 16px;
  font-size: calc(var(--size-small--em, 0.5) * 1rem);
  font-size: 0.5rem;
}"
`;

exports[`renders css for theme overrides 1`] = `
":root {
  --color-primary-200: #aed051;
  --color-primary-200--rgb: "174,208,81";
  --color-primary-300: #c3dd7b;
  --color-primary-300--rgb: "195,221,123";
  --color-primary-400: #d7e9a6;
  --color-primary-400--rgb: "215,233,166";
  --color-primary-600: #75912b;
  --color-primary-600--rgb: "117,145,43";
  --color-primary-500: #93b733;
  --color-primary-500--rgb: "147,183,51";
  --color-primary-700: #576b21;
  --color-primary-700--rgb: "87,107,33";
  --color-primary-800: #3a4717;
  --color-primary-800--rgb: "58,71,23";
  --color-neutral-600: #ffffff;
  --color-neutral-600--rgb: "255,255,255";
  --color-neutral-500: #ffffff;
  --color-neutral-500--rgb: "255,255,255";
  --color-neutral-400: #ffffff;
  --color-neutral-400--rgb: "255,255,255";
  --color-neutral-300: #fefefe;
  --color-neutral-300--rgb: "254,254,254";
  --color-neutral-200: #fefefe;
  --color-neutral-200--rgb: "254,254,254";
  --color-neutral-100: #fefefe;
  --color-neutral-100--rgb: "254,254,254";
  --color-neutral-800: #7f7f7f;
  --color-neutral-800--rgb: "127,127,127";
  --color-neutral-900: #000000;
  --color-neutral-900--rgb: "0,0,0";
  --color-primary: #93b733;
  --color-primary--rgb: "147,183,51";
  --color-neutral: #fefefe;
  --color-neutral--rgb: "254,254,254";
  --size-none: 0px;
  --size-none--em: 0;
  --size-xx-small: 2px;
  --size-xx-small--em: 0.125;
  --size-x-small: 4px;
  --size-x-small--em: 0.25;
  --size-small: 8px;
  --size-small--em: 0.5;
  --size-regular: 16px;
  --size-regular--em: 1;
  --size-large: 32px;
  --size-large--em: 2;
  --size-x-large: 64px;
  --size-x-large--em: 4;
  --size-xx-large: 128px;
  --size-xx-large--em: 8;
}

body.alt {
  --color-primary: #ff0000;
  --color-primary--rgb: "255,0,0";
  --size-root: 14px;
  --size-root--em: 1;
  --size-small: 7px;
  --size-small--em: 0.5;
  --size-regular: 14px;
  --size-regular--em: 1;
}

.test {
  color: #ff0000;
  color: var(--color-primary, #ff0000);
  color: rgba(var(--color-primary--rgb, 255,0,0), 0.2);
  color: rgba(255, 0, 0, 0.2);
  font-size: calc(var(--size-small--em, 0.5) * 1rem);
  font-size: 0.5rem;
}"
`;

exports[`renders css with prefixes 1`] = `
":root {
  --ok--color-primary-200: #aed051;
  --ok--color-primary-200--rgb: "174,208,81";
  --ok--color-primary-300: #c3dd7b;
  --ok--color-primary-300--rgb: "195,221,123";
  --ok--color-primary-400: #d7e9a6;
  --ok--color-primary-400--rgb: "215,233,166";
  --ok--color-primary-600: #75912b;
  --ok--color-primary-600--rgb: "117,145,43";
  --ok--color-primary-500: #93b733;
  --ok--color-primary-500--rgb: "147,183,51";
  --ok--color-primary-700: #576b21;
  --ok--color-primary-700--rgb: "87,107,33";
  --ok--color-primary-800: #3a4717;
  --ok--color-primary-800--rgb: "58,71,23";
  --ok--color-neutral-600: #ffffff;
  --ok--color-neutral-600--rgb: "255,255,255";
  --ok--color-neutral-500: #ffffff;
  --ok--color-neutral-500--rgb: "255,255,255";
  --ok--color-neutral-400: #ffffff;
  --ok--color-neutral-400--rgb: "255,255,255";
  --ok--color-neutral-300: #fefefe;
  --ok--color-neutral-300--rgb: "254,254,254";
  --ok--color-neutral-200: #fefefe;
  --ok--color-neutral-200--rgb: "254,254,254";
  --ok--color-neutral-100: #fefefe;
  --ok--color-neutral-100--rgb: "254,254,254";
  --ok--color-neutral-800: #7f7f7f;
  --ok--color-neutral-800--rgb: "127,127,127";
  --ok--color-neutral-900: #000000;
  --ok--color-neutral-900--rgb: "0,0,0";
  --ok--color-primary: #93b733;
  --ok--color-primary--rgb: "147,183,51";
  --ok--color-neutral: #fefefe;
  --ok--color-neutral--rgb: "254,254,254";
  --ok--size-none: 0px;
  --ok--size-none--em: 0;
  --ok--size-xx-small: 2px;
  --ok--size-xx-small--em: 0.125;
  --ok--size-x-small: 4px;
  --ok--size-x-small--em: 0.25;
  --ok--size-small: 8px;
  --ok--size-small--em: 0.5;
  --ok--size-regular: 16px;
  --ok--size-regular--em: 1;
  --ok--size-large: 32px;
  --ok--size-large--em: 2;
  --ok--size-x-large: 64px;
  --ok--size-x-large--em: 4;
  --ok--size-xx-large: 128px;
  --ok--size-xx-large--em: 8;
}

.test {
  color: #93b733;
  color: var(--ok--color-primary, #93b733);
  color: rgba(var(--ok--color-primary--rgb, 147,183,51), 0.2);
  color: rgba(147, 183, 51, 0.2);
  font-size: calc(var(--ok--size-small--em, 0.5) * 1rem);
  font-size: 0.5rem;
}"
`;

exports[`renders css with references 1`] = `
"body {
  --color-primary: #2A4FF0;
  --color-secondary: #ff593a;
  --color-foreground: #000000;
  --color-background: #ffffff;
  color: var(--color-foreground, #000000);
  background-color: var(--color-background, #ffffff);
}
body.invert {
  --color-primary: #4557b6;
  --color-secondary: #a1170a;
  --color-foreground: #ffffff;
  --color-background: #000000;
}

@media (prefers-color-scheme: dark) {
  body {
    --color-primary: #4557b6;
    --color-secondary: #a1170a;
    --color-foreground: #ffffff;
    --color-background: #000000;
  }
  body.invert {
    --color-primary: #2A4FF0;
    --color-secondary: #ff593a;
    --color-foreground: #000000;
    --color-background: #ffffff;
  }
}
.btn {
  --button-primary-background: var(--color-primary, #2A4FF0);
  --button-primary-text: var(--color-foreground, #000000);
  --button-secondary-background: var(--color-secondary, #ff593a);
  --button-secondary-text: var(--color-foreground, #000000);
}
.btn--primary {
  background-color: var(--button-primary-background, var(--color-primary, #2A4FF0));
  color: var(--button-primary-text, var(--color-foreground, #000000));
}
.btn--secondary {
  background-color: var(--button-secondary-background, var(--color-secondary, #ff593a));
  color: var(--button-secondary-text, var(--color-foreground, #000000));
}"
`;
